; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nicvf_queues.c_nicvf_sq_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nicvf_queues.c_nicvf_sq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nicvf = type { i32 }
%struct.snd_queue = type { i32 }

@NIC_QSET_SQ_0_7_CFG = common dso_local global i32 0, align 4
@NICVF_SQ_EN = common dso_local global i32 0, align 4
@NIC_QSET_SQ_0_7_DOOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nicvf*, %struct.snd_queue*, i32)* @nicvf_sq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nicvf_sq_enable(%struct.nicvf* %0, %struct.snd_queue* %1, i32 %2) #0 {
  %4 = alloca %struct.nicvf*, align 8
  %5 = alloca %struct.snd_queue*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.nicvf* %0, %struct.nicvf** %4, align 8
  store %struct.snd_queue* %1, %struct.snd_queue** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nicvf*, %struct.nicvf** %4, align 8
  %9 = load i32, i32* @NIC_QSET_SQ_0_7_CFG, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @nicvf_queue_reg_read(%struct.nicvf* %8, i32 %9, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* @NICVF_SQ_EN, align 4
  %13 = load i32, i32* %7, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* %7, align 4
  %15 = load %struct.nicvf*, %struct.nicvf** %4, align 8
  %16 = load i32, i32* @NIC_QSET_SQ_0_7_CFG, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @nicvf_queue_reg_write(%struct.nicvf* %15, i32 %16, i32 %17, i32 %18)
  %20 = load %struct.nicvf*, %struct.nicvf** %4, align 8
  %21 = load i32, i32* @NIC_QSET_SQ_0_7_DOOR, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @nicvf_queue_reg_write(%struct.nicvf* %20, i32 %21, i32 %22, i32 0)
  ret void
}

declare dso_local i32 @nicvf_queue_reg_read(%struct.nicvf*, i32, i32) #1

declare dso_local i32 @nicvf_queue_reg_write(%struct.nicvf*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
